# email-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/eval/: labeled_emails.json  labeled_emails_adversarial.json  labeled_emails_hard.json  labeled_emails_real_2026-05-12.json
data/eval/drafts/: real_email_candidates_2026-05-12.json
data/eval/reports/: heuristic_report.json  llm_report.json
data/fixtures/: mock_emails.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  appHelpers.js  dashboardData.js  demo-data.js  styles.css  uiText.js
frontend/src/components/: AppComponents.jsx  AppSections.jsx
frontend/src/locales/: de.js  en.js
src/email_agent/: __init__.py  config.py  evaluation.py  state.py
src/email_agent/api/: __init__.py  run_artifacts.py  server.py
src/email_agent/cli/: main.py
src/email_agent/graph/: workflow.py
src/email_agent/models/: __init__.py  email.py  review.py  run_metadata.py  summary.py
src/email_agent/prompts/: __init__.py  email_prompts.py
src/email_agent/providers/: __init__.py  base.py  gmail.py  mock.py  webde.py
src/email_agent/services/: __init__.py  extraction.py  importance.py  llm.py
src/email_agent/storage/: json_store.py
tests/: __init__.py  test_api_server.py  test_evaluation.py  test_extraction.py  test_gmail_provider.py  test_importance.py  test_llm.py  test_run_artifacts.py  test_smoke.py  test_webde_provider.py
